# devops

./: .gitignore  README.md
.github/workflows/: app_python.yml
ansible/: ansible.cfg  devops-lab6.pem  host.txt
ansible/playbooks/: deploy_app.yml  docker-compose.yml
ansible/roles/simple_app_deployment/defaults/: main.yml
ansible/roles/simple_app_deployment/handlers/: main.yml
ansible/roles/simple_app_deployment/tasks/: docker-compose.yml  main.yml
ansible/roles/simple_app_deployment/tests/: test.yml
ansible/roles/simple_app_deployment/vars/: main.yml
app_python/: CI.md  docker.md  dockerfile  main.py  my-visits.txt  pyproject.toml  python.md
app_python/tests/: test_1.py  test_2.py
jenkins/: Dockerfile  Jenkinsfile
k8s/: Lab11.md  Lab13.md  README.md  deployment.yml  lab12.md  service.yml  simple-app-0.1.0.tgz  username.txt
k8s/simple-app/: values.yaml
k8s/simple-app/files/: config.json
k8s/simple-app/templates/: configmap.yaml  deployment.yaml  secrets.yml  service.yaml  statefulset.yaml
monitoring/: LOGGING.md  docker-compose.yml  metrics.md  prometheus.yml
terraform/: terraform.md
terraform/aws/: main.tf
