[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Yerzhan  <gapurinoverzhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pytz = "^2021.1"
pylint = "^2.10.2"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
